# protongamesaves

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  ProtonGameSaves.py  README.md  proton-game-saves.desktop
.github/workflows/: README.md  aur-publish.yml  update-aur-alternative.yml  update-aur.yml
packaging/aur/: PKGBUILD  proton-game-saves.desktop  update-aur.sh
packaging/flatpak/: build-flatpak.sh  generate-sources.sh  io.github.rahatzamancse.ProtonGameSaves.desktop  io.github.rahatzamancse.ProtonGameSaves.json
resources/: io.github.rahatzamancse.ProtonGameSaves.metainfo.xml
scripts/: bump-version.sh  get-flatpak-checksum.sh  test-packages.sh  update-aur.sh
src/: compatdata.rs  config.rs  main.rs  manifest.rs
src/styles/: app.css  mod.rs
src/ui/: compatdata_page.rs  games_page.rs  mod.rs  settings.rs  welcome_dialog.rs  window.rs
