[package]
name = "proton_game_saves"
version = "0.1.0"
edition = "2021"
authors = ["ProtonGameSaves Team"]
description = "A GTK4 application to manage Proton game save files for Steam games"
license = "GPL-3.0"
repository = "https://github.com/rahatzamancse/protongamesaves"
homepage = "https://github.com/rahatzamancse/protongamesaves"
keywords = ["steam", "proton", "games", "saves", "gtk4"]
categories = ["games"]
readme = "README.md"

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
once_cell = "1.19"
anyhow = "1.0"
dirs = "5.0"
xdg = "2.5"
fuzzy-matcher = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0" 
humansize = "2.1.3"
